# lambdantic

./: .coveragerc  .travis.yml  404.html  README.md  index.html  mkdocs.yml  setup.cfg  sitemap.xml
example/: apigateway_simple_rest.py
lambdantic/: Fields.py  __init__.py  fields.py
lambdantic/apigateway/: __init__.py  exception.py  exceptions.py  handler.py  handlers.py  model.py  models.py
lambdantic/s3/: models.py
lambdantic/sns/: models.py
lambdantic/sqs/: models.py
search/: search_index.json
tests/lambdantic/sns/: test_notification.py  test_subscribe.py  test_unsubscribe.py
tests/test_example/: test_apigateway_simple.py
