[metadata]
name = lambdantic
description = Pydantic model and lambda event handler for AWS Lambda
url = https://github.com/koxudaxi/lambdantic/
long_description = file: README.md
long_description_content_type = text/markdown
author = Koudai Aono
author_email = koxudaxi@gmail.com
license_file = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.7.0
zip_safe = True
setup_requires =
    pytest-runner
    setuptools-scm
install_requires =
    pydantic[email,ujson] == 0.32.0


tests_require =
    pytest
    pytest-benchmark
    pytest-cov
    pytest-mock
    mypy
    isort
    freezegun
    black
    isort

[options.extras_require]
docs =
    mkdocs
    mkdocs-material

wheel =
    wheel
    twine

ci =
    codecov

[aliases]
test = pytest
